<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Indoor</string>
    <string name="hello_world">Hello world!</string>
    <string name="next">下一步</string>
    <string name="title_activity_guidetwo">GuidetwoActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_release">ReleaseActivity</string>
    <string name="title_activity_situation">SituationActivity</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="contact">联系人</string>
    <string name="release">发布</string>
    <string name="personal">个人</string>
    <string name="situation">动态</string>
    <string name="map">地图</string>
    <string name="setting">设置</string>
    <string name="title_activity_mapsetting">MapsettingActivity</string>
    <string name="opensatellite">开启卫星图</string>
    <string name="opennormal">开启普通地图</string>
    <string name="opentraffic">开启实时交通图</string>
    <string name="openheat">开启城市热力图</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="peoplesources">联系人来源设置</string>
    <string name="situationsetting">动态设置</string>
    <string name="followorunfollow">关注&amp;屏蔽</string>
    <string name="about">关于我们</string>
    <string name="feedback">反馈与建议</string>
    <string name="purchases">购买记录</string>
    <string name="privacysetting">隐私设置</string>
    <string name="wallpapersetting">壁纸设置</string>
    <string name="clearchat">清空聊天记录</string>
    <string name="clearcache">清空缓存</string>
    <string name="logout">登出或切换账号</string>
    <string name="mapsetting">地图设置</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_media">MediaActivity</string>
    <string name="title_activity_shopping">ShoppingActivity</string>
    <string name="title_activity_contactsources">ContactsourcesActivity</string>
    <string name="title_activity_aboutus">AboutusActivity</string>
    <string name="title_activity_privacysetting">PrivacysettingActivity</string>
    <string name="title_activity_clearchat">ClearchatActivity</string>
    <string name="title_activity_clearcache">ClearcacheActivity</string>
    <string name="title_activity_situationsetting">SituationsettingActivity</string>
    <string name="title_activity_wallpapersetting">WallpapersettingActivity</string>
    <string name="title_activity_mediasetting">MediasettingActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_personalsetting">PersonalsettingActivity</string>
    <string name="search">搜索</string>
    <string name="locate">定位</string>
    <string name="zoomin">放缩</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="usernameflag">用户名：</string>
    <string name="loginhintuser">请输入用户名</string>
    <string name="passwordflag">密码：</string>
    <string name="loginhintpassword">请输入密码</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认：</string>
    <string name="confirmpasswordagain">请再次输入密码</string>
    <string name="email">邮箱：</string>
    <string name="emailhint">请输入邮箱</string>
    <string name="travelplans">出行计划</string>
    <string name="statuspraesens">现在状态</string>
    <string name="draftbox">草稿箱</string>
    <string name="allplan">所有计划</string>
    <string name="friendsstatus">好友状态</string>
    <string name="particularconcern">特别关心</string>
    <string name="newsmedia">新闻媒体</string>
    <string name="personal_information">个人信息</string>
    <string name="Online_shopping">网上购物</string>
    <string name="headsculpture">头像</string>
    <string name="location">位置：</string>
    <string name="signature">个性签名</string>
    <string name="nickname">昵称：</string>
    <string name="accountsettings">账号设置</string>
    <string name="contactrelationship">联系人关系</string>
    <string name="personal_data">个人资料</string>
    <string name="privacy_settings">隐私设置</string>
    <string name="mediasetting">媒体设置</string>
    <string name="function_wizard">功能向导</string>
    <string name="development_team">开发团队</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="common_problem">常见问题</string>
    <string name="voice_navigation">开启语音导航</string>
    <string name="download_offlinemap">下载离线地图</string>
    <string name="headlines_sort">头条智能排序</string>
    <string name="news_push">要闻推送</string>
    <string name="original_push">原创推送</string>
    <string name="night_push">夜间推送</string>
    <string name="onlywifi">仅wifi网络下载图片</string>
    <string name="realname">真实姓名</string>
    <string name="secret">保密</string>
    <string name="only_friends">仅好友可见</string>
    <string name="allvisible">所有人可见</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="birthday">生日</string>
    <string name="position">位置</string>
    <string name="maritalstatus">婚姻状况</string>
    <string name="residence">现居地</string>
    <string name="profession">职业</string>
    <string name="workplace">工作地</string>
    <string name="hometown">家乡</string>
    <string name="school">学校</string>
    <string name="specialreminder">特别关注动态提醒</string>
    <string name="nonlocal_intoremind">非本地联系人进入当地提醒</string>
    <string name="distance_smallerthan_remind">联系人距离小于设定值提醒</string>
    <string name="birthday_reminder">联系人生日提醒</string>
    <string name="atreminder">有人@我时提醒</string>
    <string name="myplan_reminder">我的计划提醒</string>
    <string name="onoroff">开启？</string>
    <string name="realnametip">真实姓名：</string>
    <string name="agetip">年龄：</string>
    <string name="birthdaytip">生日：</string>
    <string name="sextip">性别：</string>
    <string name="maritalstatustip">婚姻状况：</string>
    <string name="schooltip">学校：</string>
    <string name="hometowntip">家乡：</string>
    <string name="professiontip">职业：</string>
    <string name="workplacetip">工作地：</string>
    <string name="hobbies">爱好</string>
    <string name="hobbiestip">爱好：</string>
    <string name="signaturetip">个性签名：</string>
    <string name="send">发送</string>
    <string name="feedbacktip">请输入您的反馈或意见</string>
    <string name="radius">半径：</string>
    <string name="distancelocal">距离本地：</string>
    <string name="changerealname">修改真实姓名</string>
    <string name="changeschool">修改学校</string>
    <string name="changehometown">修改家乡</string>
    <string name="changeprofession">修改职业</string>
    <string name="changeworkplace">修改工作地</string>
    <string name="changehobbies">修改爱好</string>
    <string name="changesignature">修改个性签名</string>
    <string name="changeage">修改年龄</string>
    <string name="changesex">修改性别</string>
    <string name="changebirthday">修改生日</string>
    <string name="changemaritalstatus">修改婚姻状况</string>
    <string name="relation">关系</string>
    <string name="title_activity_improvepersonaldata">ImprovepersonaldataActivity</string>
    <string name="improvepersonal_data">完善个人信息</string>
    <string name="ok">确定</string>
    <string name="clicktochange">点击进行修改 （下同）</string>
    <string name="title_activity_setsculpture">SetsculptureActivity</string>
    <string name="choosefromphoto">从相册选择</string>
    <string name="choosefromtakephoto">拍照</string>
    <string name="setsculpture">选择你的头像</string>
    <string name="backto">上一步</string>
    <string name="changeheadsculpture">更改你的头像</string>
    <string name="personalsetting">个人资料设置</string>
    <string name="touchtochangehead">点击头像即可修改</string>
    <string name="touchtochangepassword">点击修改密码</string>
    <string name="changepassword">修改密码</string>
    <string name="originpassword">原始密码</string>
    <string name="newpassword">新密码</string>
    <string name="confirmagainpassword">确认密码</string>
    <string name="originpassworderror">旧密码错误</string>
    <string name="pushcontent">推送内容</string>
    <string name="newscontent">新闻内容</string>
    <string name="title_hint">标题</string>
    <string name="describe_hint">描述</string>
    <string name="list_no_data_lost">没有任何好友，快去添加好友吧！</string>
    <string name="progress_loading">正在获取数据......</string>
    <string name="confirmagainpassworderror">新密码与确认密码不一致</string>
    <string name="title_activity_changepassword">ChangepasswordActivity</string>
    <string name="loadmore">显示下20条</string>
    <string name="title_activity_goods_detail">Goods_detailActivity</string>
    <string name="goodscontent">商品详情</string>
    <string name="rightpurse">立即购买</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="chatform">聊天对话</string>
    <string name="chatwithlingdang">铃铛云聊</string>
    <string name="AddFriends">添加好友</string>
    <string name="title_activity_add_friends">AddFriendsActivity</string>
    <string name="PleaseInputFriendName">请输入好友昵称</string>
    <string name="A">A</string>
    <string name="HowToAdd">昵称/邮箱</string>

</resources>
