<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >
    
    <RelativeLayout 
        android:id="@+id/head"
        android:layout_width="match_parent"
   		android:layout_height="45dp">
    
      <ImageView 
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        android:contentDescription="@string/hello_world"
        android:layout_centerVertical="true"
        android:layout_gravity="center"/>
         
        <TextView 
           android:layout_centerInParent="true"
           android:id="@+id/biaoti"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/feedback"
           android:textSize="18sp"/>   
       
    </RelativeLayout>
      <View 
        android:background="#808080"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    
   		<LinearLayout 	
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
         	android:orientation="vertical">
       <EditText
          android:hint="@string/feedbacktip"
          android:gravity="top"
          android:layout_marginTop="20dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:layout_marginBottom="20dp"
          android:layout_height="160dp"
          android:cursorVisible="false"
          android:layout_gravity="center"
          android:background="@android:drawable/edit_text"
          android:layout_width="fill_parent"/>
       
       <Button
          android:layout_marginTop="30dp"
          android:layout_width="fill_parent"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:background="#cccccc"
          android:text="@string/send"
          android:layout_height="30dp"/>

    </LinearLayout>
   
</LinearLayout>