<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
      
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <com.left.indoor.myview.RoundImageView 
        android:id="@+id/friendsphoto"
        android:layout_marginLeft="10dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/satellitemap"/>
	    <LinearLayout 
	        android:paddingLeft="15dp"
	        android:paddingTop="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        <TextView 
	            android:id="@+id/friendsname"
	            android:textStyle="bold"
	            android:textSize="16sp"
	            android:textColor="@android:color/black"
	            android:text="@string/usernameflag"
	            android:layout_width="wrap_content"
	            android:layout_height="30dp"/>
	         <TextView 
	            android:id="@+id/position"
	            android:layout_width="wrap_content"
	            android:layout_height="30dp"
	            android:text="@string/position"/>
	    </LinearLayout>
    </LinearLayout>
    
    <View 
        android:background="#808080"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</LinearLayout>

