<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >
    
    <RelativeLayout 
        android:id="@+id/head"
        android:layout_width="match_parent"
   		android:layout_height="45dp">
    
      <ImageView 
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:contentDescription="@string/hello_world"/>
         
        <TextView 
           android:layout_centerInParent="true"
           android:id="@+id/biaoti"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/AddFriends"
           android:textSize="18sp"/>   
       
    </RelativeLayout>
    
   <View 
        android:background="#808080"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
   
   <com.left.indoor.chat.ClearEditText
        android:id="@+id/filter_edit"
        android:layout_marginTop="5dip"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/search_bar_edit_selector"
        android:drawableLeft="@drawable/search_bar_icon_normal"
        android:hint="@string/HowToAdd"
        android:singleLine="true"
        
        android:textSize="15.0dip" />
   
</LinearLayout>

