<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
   		android:layout_height="45dp">
        <TextView 
           android:layout_centerInParent="true"
           android:id="@+id/biaoti"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/setsculpture"
           android:textSize="18sp"/>
       
    </RelativeLayout>
    
        <com.left.indoor.myview.RoundImageView
            android:id="@+id/sculpture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/user" />
        
        <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="30dp"
        android:layout_height="40dp" >

         <Button
            android:id="@+id/choosefromphoto"
            android:layout_width="100dp"
            android:layout_height="40dp" 
            android:gravity="center"
            android:background="@android:color/holo_green_dark"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:text="@string/choosefromphoto"
            android:textSize="16sp" />
         <Button
            android:id="@+id/choosefromtakephoto"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@android:color/holo_green_dark"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:text="@string/choosefromtakephoto"
            android:textSize="16sp" />
    </RelativeLayout>
    
         <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="30dp"
        android:layout_height="40dp" >
         <Button
            android:id="@+id/ok"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/ok"
            android:textSize="20sp" />
    </RelativeLayout>
     
</LinearLayout>